# eiopaPy

./: README.md  pyproject.toml
eiopaPy/: __init__.py  client.py
tests/: test_client.py
