[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "eiopapy"
version = "0.1.0"
description = "Python client for EIOPA risk-free rate (RFR) curves. Port of the R package eiopaR."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.20",
    "pandas>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.0",
]

[project.urls]
Homepage = "https://github.com/MehdiChelh/eiopaR"
